Fixed contact to scale properly on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ p {
 }
 
 #logo-image {
-    width: 30%;
+    width: 65%;
     padding-top: 1cm;
     padding-bottom: 1cm;
 }
@@ -186,16 +186,6 @@ footer {
   }
 
 /* contact us page */
-.contact-h2 {
-    font-size: 15px;
-    background-color: lightseagreen;
-    font-family: 'Cormorant Garamond', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 6px;
-    font-size: 5rem;
-    padding: 40px;
-    text-align: center;
-}
 
 .contact-us-p {
     font-size: 1.8rem;
@@ -205,6 +195,16 @@ footer {
     width: 100%;
     text-align: center;
     line-height: 1.5;
+}
+
+.contact-h2 {
+    background-color: lightseagreen;
+    background-size: 40px;
+    color: white;
+    font: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 40px;
 }
 
 a:hover {
@@ -269,15 +269,6 @@ a:hover {
 .lets-chat-button:hover {
     background-color: #5e7f8a;
     color: #fcfcfc;
-}
-
-.contact-details {
-    display: grid;
-    justify-content: center;
-    align-content: center;
-    outline: black solid 5px;
-    outline-offset: -20px;
-    width: 100%;
 }
 
 .contact-details div {
@@ -345,7 +336,6 @@ a:hover {
     outline: #efefef solid 5px;
     outline-offset: -20px;
 }
-
 
 /* Media Queries */
 
@@ -425,16 +415,14 @@ a:hover {
     }
 
     /*Contact page styles start here */
-    iframe {
-        display: grid;
-        justify-self: center;
-        align-self: center;
-        width: 250px;
-        height: 150px;
+    .contact-methods {
+        grid-template-columns: 1fr;
+        padding: 0 10px;
     }
-
-    .contact-details p {
-        font-size: 1rem;
+    
+    .contact-form,
+    .contact-details {
+        outline-offset: -10px;
     }
 }
   /* For medium screens of 950px wide and down */
@@ -546,76 +534,5 @@ a:hover {
         outline-offset: -10px;
     }
 }
-  
-  /* Desktop styles */
-  @media (min-width: 992px) {
 
-        /* Navigation bar */
-        #menu-links {
-            display: block;
-            width: 100%;
-            padding: 0px;
-        }
-    
-        li.navbar-links,
-        li.active {
-            padding: 20px 0;
-        }
-    
-        /* Page H1s excluding the homepage */
-        .page-h1 {
-            font-size: 2.5rem;
-        }
-    
-        /* Page opening paragraphs excluding homepage */
-        .page-opening-text p {
-            padding: 20px 40px;
-            font-size: 1.3rem;
-        }
-    
-        /*Homepage styles start here */
-        /* Quote section */
-        #quote-section h2 {
-            font-size: 1.8rem;
-        }
-    
-        /* Packages page styles */
-        .package-options img {
-            height: 250px;
-            width: 250px;
-        }
-    
-        .package-container {
-            grid-template-columns: 1fr;
-            grid-template-rows: 1fr;
-        }
-    
-        .package-container h2 {
-            grid-column: 1;
-            font-size: 2rem;
-        }
-    
-        .package-options {
-            padding: 10px;
-        }
-    
-        /*Gallery page styles */
-        .gallery-photo {
-            width: 100%;
-            height: auto;
-        }
-    
-        /*Contact page styles start here */
-        iframe {
-            display: grid;
-            justify-self: center;
-            align-self: center;
-            width: 250px;
-            height: 150px;
-        }
-    
-        .contact-details p {
-            font-size: 1rem;
-        }
-    }    
 
